src/yini_test/cases/golden/strict/valid/numbers/floats.strict.yini
@yini strict

^ Numbers
ratio = 0.75
wholeWithFraction = 10.0
scientific = 1.25e2

/END
