src/yini_test/cases/golden/strict/invalid/keys/empty-key.strict.yini
@yini strict

^ Keys
= "missing key"

/END
